--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:18.0.0'
+    compile 'com.android.support:support-v4:23.0.1'
 }
