--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.bu.ec500c1.tasterchallengeandroid" >
 
-    <uses-permission android:name="android.permission.GET_TASKS"/>
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,11 +21,22 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings" >
+
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".ParentalControl"
-            android:label="@string/title_activity_parental_control" >
+
+            android:screenOrientation="landscape">
+        </activity>
+        <activity
+            android:name=".ControlSettingsActivity"
+
+            android:screenOrientation="landscape">
+        </activity>
+        <activity
+            android:name=".VideoPlayerActivity"
+            android:screenOrientation="landscape">
         </activity>
     </application>
 
